# community-organisation

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: conference.md  idea.md  new-event.md
.github/workflows/: build-gh-pages.yml
docs/: _config.yml  _toc.yml  faq.md  intro.md
docs/sub_pages/: about_pycologne.md  accounts.md  coaching.md  facilitating_events.md  hosting_and_sponsorship.md  social_media.md  speakers_guide.md  supporting_pycologne.md
docs/sub_pages/templates/: email_templates.md  meetup_template.md  social_media_templates.md
