[tool.poetry]
name = "pycologne-community-docs"
version = "0.1.0"
description = "Directory for generating community docs with Jupyter books."
authors = ["PyCologne <info@jn.contact>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^0.15.1"
sphinx-tags = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
